--- a/style.css
+++ b/style.css
@@ -8,15 +8,23 @@ body {
     text-align: center;
 }
 
+h1 {
+    margin: 20px;
+}
+
+h3 {
+    text-transform: capitalize;
+}
+
 .connect-four {
     background-color: yellow;
     display: inline-block;
-
+    margin: 30px;
 }
 
 .col {
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     display: inline-block;
     background: white;
     border-radius: 50%;
