--- a/style.css
+++ b/style.css
@@ -16,15 +16,29 @@ h3 {
     text-transform: capitalize;
 }
 
+.game-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.left-leg,
+.right-leg {
+    background: blue;
+    height: 350px;
+    width: 25px;
+}
+
 .connect-four {
     background-color: yellow;
     display: inline-block;
-    margin: 30px;
+    margin: 30px 0 80px 0;
+    border-bottom: 10px solid blue
 }
 
 .col {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
     background: white;
     border-radius: 50%;
