--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ h3 {
     background-color: yellow;
     display: inline-block;
     margin: 30px 0 80px 0;
-    border-bottom: 10px solid blue
+    border-bottom: 10px solid blue;
+    padding: 5px;
 }
 
 .col {
